Commit before merge with Master